[FIX] web: dropdown's menu wrong background color
This commit restores our dropdown component's background color by
avoiding to override the dropdown-menu background color provided by the
Bootstrap component, which resulted into a darker background.

task-3600468

Part-of: odoo/odoo#158560

--- a/addons/web/static/src/core/dropdown/dropdown.scss
+++ b/addons/web/static/src/core/dropdown/dropdown.scss
@@ -71,7 +71,6 @@
     font-size: $dropdown-font-size;
     margin-top: var(--Dropdown_menu-margin-y, #{map-get($spacers, 1)});
     margin-bottom: var(--Dropdown_menu-margin-y, #{map-get($spacers, 1)});
-    background-color: $dropdown-bg;
 
     .dropdown-toggle:focus,
     .dropdown-item:focus {
